# algochains-mcp-server

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  HIDDEN_KILLERS_AUDIT.md  INSTRUCTIONS.md  INTEGRATION_README.md  LATENCY_GUIDE.md  LICENSE  MARKETPLACE_CREATOR_GUIDE.md  MEGA_PROMPT_DEV_ONBOARDING.md  MEGA_PROMPT_PREDICTION_MARKETS_V1.md  MEGA_PROMPT_V22.md  Makefile  README.md  README_DRAFT.md  README_backup_20260522.md  SAFETY_MODEL.md  UX_BLUEPRINT.md  algochains.ts  pyproject.toml  registry.json  server.json  setup_mac.sh  smithery.yaml
.github/: dependabot.yml
.github/workflows/: lint.yml  mcp-regression-gate.yml  migrations.yml  pypi-version-drift.yml  release.yml  security.yml  test.yml
algoclaw/: README.md  cli.py  run-mcp.sh
algoclaw/agents/: registry.json
blueprints/: KALSHI_INTEGRATION_BLUEPRINT_V1.md  PAI_INTEGRATION_BLUEPRINT.md  PREDICTION_MARKETS_GAP_ANALYSIS.md  PREDICTION_MARKET_BOTS_BLUEPRINT.md  SKILLS_BRIDGE_BLUEPRINT.md  UPGRADE_BLUEPRINT_V22.md
blueprints/archive/: PAI_INTEGRATION_BLUEPRINT.md  SKILLS_BRIDGE_BLUEPRINT.md
config/: compliance_profiles.json  mcporter.json  stress_scenarios.json
config/profiles/: eu_mifid2.json  us_institutional.json  us_retail_algo.json
docs/: ALGOCHAINS_MASTER_ROADMAP_MEGA_PROMPT.md  ALGOCHAINS_MEGA_BLUEPRINT_V2.md  ALGOCHAINS_MEGA_BLUEPRINT_V2_PART2.md  ALGOCHAINS_MEGA_BLUEPRINT_V2_PART3.md  ALGOCHAINS_MEGA_PROMPT_V3.md  AUDIT_LOG_20260510.md  CICD_SERVICE_ACCOUNTS.md  CLI_GAP_ANALYSIS.md  COMMS_STRATEGY.md  DEVELOPER_TIER_ONBOARDING.md  GOTCHAS_AND_BUGS.md  GPU_COMPUTE_RENTAL_BUILD_PLAN.md  INTEGRATION_README.md  LEGAL_COMPLIANCE_AUDIT.md  LIVE_OPS_TOOL_ROUTING.md  MANAGED_CLOUD_PROVISIONING_BUILD_PLAN.md  MASTER_BLUEPRINT_V4_V6.md  MCPORTER_INTEGRATION_BLUEPRINT.md  MCPORTER_INTEGRATION_BLUEPRINT_V2.md  MCP_AUTH_AND_POLICY_MATRIX.md  MCP_HTTP_BRIDGE_THREAT_MODEL.md  MCP_PARITY_AND_AUTONOMOUS_GAP.md  MCP_SERVER_ENHANCEMENT_ROADMAP.md  MCP_TRACEABILITY_CONTRACT.md  MEGAPROMPT_MCP_FIX.md  NUMERAI_TOURNAMENT.md  REMOTE_CONNECTORS.md  REVENUE_PLATFORM_BUILD_PLAN_V1.md  SAFE_MODE_MATRIX.md  SUBSCRIBER_TOOLS.md  TIER_REGISTRY_CHANGES.md  TRADOVATE_PARITY.md  V17_MULTI_BROKER_SCALING_BLUEPRINT.md  V7_BYOK_KEY_ORCHESTRATOR_BLUEPRINT.md  V8_STRATEGY_BUILDER_SOCIAL_TRADING_BLUEPRINT.md  V9_RISK_DASHBOARD_COMPLIANCE_WHITELABEL_BLUEPRINT.md
examples/trade_propagation/: TRADE_PROPAGATION.md  dummy_signal_test.py  send_signal.py
homebrew/: algochains.rb
man/man1/: algochains.1
migrations/: v10_v16_schema.sql  v8_v9_schema.sql
scripts/: algochains  algochains.ps1  demo_algochains.sh  install.ps1  install.sh  install_on_desktop.sh  quickstart.py  run_bandit.sh  secret_scan.py  setup_cc_tunnel.sh  startup_health_check.py  test_cli_20.sh
skills/: blueprint-executor.ts  bot-health-monitor.ts  contract-rollover-handler.ts  deploy-bot-changes.ts  institutional-flow-analysis.ts  mcpt-pipeline-ops.ts  money-blender-ops.ts  morning-health-brief.ts  strategy-vault-tracker.ts  system-audit-fix.ts
src/algochains_mcp/: __init__.py  adaptive_brain_status.py  agent_memory.py  agent_sandbox.py  bot_log_paths.py  cli_contract.py  config.py  cron_retry.py  daemon_callback_auth.py  daily_loss_proximity.py  data_ingestion.py  developer_auth.py  developer_rate_limiter.py  developer_tools.py  e2e_sentinel.py  errors.py  fleet_daemon_status.py  http_bridge.py  http_transport.py  incident_report.py  latency_monitor_status.py  learning_signals.py  memory_safety.py  middleware.py  onboarding.py  onboarding_meta.py  orphan_bracket_scanner_status.py  otel_tracing.py  paths.py  performance_reports.py  platform_analytics.py  prediction_market_metrics.py  server.py  skills_registry.py  sse_server.py  subscriber_auth.py  subscriber_tools.py  support_tickets.py  telos.py  tool_danger_tiers.py  (+11 more)
src/cli/: package-lock.json  package.json  tsconfig.json
src/stripe_app/: server.py
state/: guardrail_prefs.json  guardrails_state.json  guardrails_state.json.bak.20260511_173139  marketplace_listings.json  marketplace_subscriptions.json  onboarding_state.json  white_label.json
supabase/: config.toml
supabase/migrations/: 20260406_platform_tables.sql  20260409_owner_bot_live_view.sql  20260512061500_waitlist_slack_constraints.sql  20260512063500_waitlist_slack_webhook_triggers.sql  20260521_developer_api_keys.sql  20260522_payment_tables.sql  20260523_subscriber_copytrade.sql  20260524_seat_cap_trigger.sql  20260525_subscriber_consent.sql  20260526_referrals.sql  20260527_usage_metering.sql  20260528_creator_earnings.sql  20260529_realized_pnl.sql  20260530_multi_tenant.sql  20260531_tenant_rls_policies.sql  20260614000100_developer_api_keys.sql  20260614000200_mfa_audit_log.sql  20260614000400_subscriber_api_keys.sql  20260614_developer_api_keys.sql  20260614_rls_hardening.sql  20260614_subscriber_api_keys.sql  20260709000100_subscriber_api_keys_schema_reconcile.sql
tests/: __init__.py  conftest.py  test_account_protection.py  test_adaptive_brain_status.py  test_agent_memory_truncation.py  test_ai_pipeline_health.py  test_algoclaw_security_posture.py  test_appsec_medium_fixes_20260721.py  test_bot_health_demo_log.py  test_bot_health_signal_slice.py  test_bot_health_v22_extensions.py  test_bot_log_path_resolution.py  test_bot_log_paths.py  test_bot_log_sources.py  test_bot_ops_bracket_integrity.py  test_bracket_integrity_check.py  test_bridge.py  test_broker_config_aliases.py  test_builder_sdk.py  test_cricket_bot_handlers.py  test_cron_retry.py  test_daily_loss_proximity.py  test_developer_auth.py  test_developer_rate_limiter.py  test_developer_tools.py  test_dynamic_dispatch_safety.py  test_e2e_sentinel.py  test_e2e_sentinel_summary.py  test_errors.py  test_fleet_daemon_status.py  test_gpu_dispatcher_routing.py  test_hidden_killer_mcp_parity.py  test_http_bridge_auth.py  test_http_bridge_compat_routes.py  test_http_bridge_developer_auth.py  test_http_bridge_health_aliases.py  test_http_bridge_scope.py  test_http_bridge_subscribers.py  test_http_transport.py  test_http_transport_health.py  (+43 more)
tests/live/: test_live_audit.py
(+278 files in other folders)
