[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algochains-mcp-server"
version = "0.1.0"
description = "AlgoChains MCP Server — Universal broker connectors, marketplace integration, and AI strategy hosting for the AlgoChains platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "AlgoChains", email = "tyler@algochains.io" }]
keywords = ["mcp", "trading", "broker", "algochains", "alpaca", "ibkr", "oanda", "quantconnect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
alpaca = ["alpaca-py>=0.30.0"]
ibkr = ["ib-async>=1.0.0"]
oanda = ["v20>=3.0.25"]
all = [
    "alpaca-py>=0.30.0",
    "ib-async>=1.0.0",
    "v20>=3.0.25",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[project.scripts]
algochains-mcp = "algochains_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/algochains_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100
