[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algochains-mcp-server"
version = "20.0.0"
description = "AlgoChains MCP Server — Universal AI-to-broker trading protocol with 227 tools, account protection (13 pre-trade safety guards), Builder SDK (data warehouse + strategy submission), MCPT marketplace, BYOK keys, streaming, portfolio optimization, and memory-safe architecture"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "AlgoChains", email = "tyler@algochains.io" }]
keywords = ["mcp", "trading", "broker", "algochains", "alpaca", "ibkr", "oanda", "quantconnect", "polygon", "finnhub", "portfolio", "streaming", "byok", "datasets", "ml", "backtrader", "marketplace", "account-protection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
alpaca = ["alpaca-py>=0.30.0"]
ibkr = ["ib-async>=1.0.0"]
oanda = ["v20>=3.0.25"]
all = [
    "alpaca-py>=0.30.0",
    "ib-async>=1.0.0",
    "v20>=3.0.25",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]
auth = [
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
]
polygon = ["polygon-api-client>=1.14.0"]
yahoo = ["yfinance>=0.2.40"]
alphavantage = ["alpha-vantage>=2.3.1"]
finnhub = ["finnhub-python>=2.4.20"]
twelvedata = ["twelvedata>=1.2.10"]
data-all = [
    "yfinance>=0.2.40",
    "polygon-api-client>=1.14.0",
    "alpha-vantage>=2.3.1",
    "finnhub-python>=2.4.20",
    "twelvedata>=1.2.10",
]
notifications = ["firebase-admin>=6.0.0"]
datasets = ["pandas>=2.0.0", "pyarrow>=14.0.0"]
backtrader = ["backtrader>=1.9.78"]
supabase = ["supabase>=2.0.0"]
http = ["fastapi>=0.111.0", "uvicorn[standard]>=0.30.0"]
optimize = ["optuna>=3.0.0"]

[project.scripts]
algochains-mcp = "algochains_mcp.server:main"
algochains-mcp-http = "algochains_mcp.http_transport:run_http_server"

[tool.hatch.build.targets.wheel]
packages = ["src/algochains_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100
